--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -5,3 +5,10 @@
     -ms-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    background: #fff;
+}
