--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -12,3 +12,26 @@ body{
     margin: 0;
     background: #fff;
 }
+
+.loading-area{
+    position: fixed;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    width: 60px;
+    height: 60px;
+    z-index: 99;
+    background: #fff;
+}
+
+.loader{
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    font-size: 30px;
+    color: #000;
+}
