--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -13,16 +13,6 @@ body{
     background: #fff;
 }
 
-.loading-area{
-    position: fixed;
-    top: calc(50% - 30px);
-    left: calc(50% - 30px);
-    width: 60px;
-    height: 60px;
-    z-index: 99;
-    background: #fff;
-}
-
 .loader{
     width: 200px;
     height: 200px;
@@ -34,4 +24,40 @@ body{
     margin: -100px 0 0 -100px;
     font-size: 30px;
     color: #000;
+    perspective: 200px;
+}
+
+.load-anim1,.load-anim2{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid;
+    border-left-color: #10ac84;
+    border-top-color: #ff9f43;
+    border-right-color: #0984e3;
+    border-bottom-color: #d63031;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+
+    animation: loadAnim 6s;
+    animation-iteration-count: infinite;
+}
+
+.load-anim2{
+    animation: loadAnim2 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes loadAnim{
+    0%{  transform: rotate3d(1,1,1,0deg); }
+    100%{  transform: rotate3d(1,1,1,360deg); }
+}
+
+@keyframes loadAnim2{
+    0%{  transform: rotate3d(1,1,1,0deg); }
+    100%{  transform: rotate3d(1,1,1,-360deg); }
 }
