--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -1,9 +1,13 @@
-// default reset to box modal
+/* default reset to box modal */
 *,*:after,*:before{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+}
+ /* default style  */
+nav, main{
+    opacity: 0.2;
 }
 
 body{
@@ -13,6 +17,17 @@ body{
     background: #fff;
 }
 
+/* our navbar */
+nav{
+    height: 10vh;
+}
+
+#countrySelect{
+    margin: 2vh 10vw;
+    width: 15vw;
+}
+
+ /* animation */
 .loader{
     width: 200px;
     height: 200px;
