Created button in navbar targeting module
Created button in navbar targeting module:
this button is country and cities info and linked to module empty template

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -27,6 +27,13 @@ nav{
     width: 8vw;
 }
 
+/* buttons */
+.btn-cities{
+        width: 100px;
+        height: 75px;
+        background: url("../img/cities.png");
+        border-radius: 50%;
+}
  /* animation */
 .loader{
     width: 200px;
