Created new navbar list item button calendar
Created new navbar list item button calendar:
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -43,6 +43,9 @@ nav{
 .btn-youtube{
     background: url("../img/youtube.png")no-repeat center;
 }
+.btn-calendar{
+    background: url("../img/calendar.png")no-repeat center;
+}
  /* animation */
 .loader{
     width: 200px;
