Created new navbar list item button weather forecast
Created new navbar list item button weather forecast:
Added new image file
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -46,6 +46,9 @@ nav{
 .btn-calendar{
     background: url("../img/calendar.png")no-repeat center;
 }
+.btn-weather{
+    background: url("../img/weather_forecast.png")no-repeat center;
+}
  /* animation */
 .loader{
     width: 200px;
