Created new navbar list item button language
Created new navbar list item button language:
Added new image for button
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -49,6 +49,9 @@ nav{
 .btn-weather{
     background: url("../img/weather_forecast.png")no-repeat center;
 }
+.btn-language{
+    background: url("../img/language.png")no-repeat center;
+}
  /* animation */
 .loader{
     width: 200px;
