Created new navbar list item button covid
Created new navbar list item button covid:
Added new image that will be used for button
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -52,6 +52,9 @@ nav{
 .btn-language{
     background: url("../img/language.png")no-repeat center;
 }
+.btn-covid{
+    background: url("../img/covid.png")no-repeat center;
+}
  /* animation */
 .loader{
     width: 200px;
