--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -14,7 +14,9 @@ body{
     font-size: 16px;
     margin: 0;
     background: #fff;
+    font-family: 'Alegreya SC', serif;
 }
+
 img{
     width: 100%;
 }
@@ -57,6 +59,13 @@ nav{
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
+}
+
+.row span{
+    margin: 1vh auto;
+}
+.modal-content{
+    box-shadow: 7px 7px 0px 2px #fafafa;
 }
 /* hover effects for select countries */
 #countrySelect:hover,
