update style details module

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -65,6 +65,12 @@ nav{
     -moz-appearance: none;
 }
 
+#details{
+    font-size: large;
+    padding: 2vh 2vw;
+    border: 1px solid slategray;
+}
+
 .row span{
     margin: 1vh auto;
 }
