Created place where wikipedia modal body result will be
Created place where wikipedia modal body result will be:

this time result will be created inside js and populated in index.html

--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -71,6 +71,13 @@ nav{
     border: 1px solid slategray;
 }
 
+.summary{
+    padding: 2vh 2vw;
+}
+.thumbnailImg{
+    height: 15vh;
+    width: 200px;
+}
 .row span{
     margin: 1vh auto;
 }
