--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -78,6 +78,10 @@ nav{
     height: 15vh;
     width: 200px;
 }
+iframe{
+    width: 100%;
+    height: 50vh;
+}
 .row span{
     margin: 1vh auto;
 }
