--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -71,6 +71,17 @@ nav{
     border: 1px solid slategray;
 }
 
+#calendar{
+    width: 75vw;
+}
+
+#calendarModalLabel{
+    font-size: xx-large;
+}
+
+.holiday-modal-content{
+    width: 100vw;
+}
 .summary{
     padding: 2vh 2vw;
 }
@@ -85,6 +96,7 @@ iframe{
 .row span{
     margin: 1vh auto;
 }
+
 .modal-content{
     background-image: linear-gradient(to left bottom, #dcdc7b, #dfd366, #e4c951, #eabe3c, #f0b225);
     box-shadow: 0px 20px 0px -10px #000, 0px -20px 0px -10px #000, 20px 0px 0px -10px #000, -20px 0px 0px -10px #000, 0px 0px 0px 10px #ff0000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
