--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -71,10 +71,13 @@ nav{
     border: 1px solid slategray;
 }
 
-#calendar,#forecast_body {
+#calendar {
     width: 75vw;
 }
 
+.forecast_view{
+    width: max-content;
+}
 #calendarModalLabel{
     font-size: xx-large;
 }
@@ -98,6 +101,7 @@ iframe{
 }
 
 .modal-content{
+    width: auto;
     background-image: linear-gradient(to left bottom, #dcdc7b, #dfd366, #e4c951, #eabe3c, #f0b225);
     box-shadow: 0px 20px 0px -10px #000, 0px -20px 0px -10px #000, 20px 0px 0px -10px #000, -20px 0px 0px -10px #000, 0px 0px 0px 10px #ff0000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
 }
