--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -1,11 +1,12 @@
-/* default reset to box modal */
+/* DEFAULT RESET BOX MODAL */
 *,*:after,*:before{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
 }
- /* default style  */
+
+ /* DEFAULT STYLES  */
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
@@ -19,7 +20,21 @@ img{
     width: 100%;
 }
 
-/* our navbar */
+.summary{
+    padding: 2vh 2vw;
+}
+
+.row span{
+    margin: 1vh auto;
+}
+
+.modal-content{
+    width: auto;
+    background-image: linear-gradient(to left bottom, #dcdc7b, #dfd366, #e4c951, #eabe3c, #f0b225);
+    box-shadow: 0px 20px 0px -10px #000, 0px -20px 0px -10px #000, 20px 0px 0px -10px #000, -20px 0px 0px -10px #000, 0px 0px 0px 10px #ff0000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
+}
+
+/* navbar */
 nav{
     position: absolute;
     left: 0;
@@ -51,56 +66,48 @@ nav{
     text-align: center;
 }
 
+/* calendar */
 #calendar {
     width: 75vw;
 }
-
-.forecast_view{
-    width: max-content;
-}
-#calendarModalLabel{
-    font-size: xx-large;
-}
-
 .holiday-modal-content{
     width: 100vw;
 }
-.summary{
-    padding: 2vh 2vw;
-}
-.thumbnailImg{
-    height: 15vh;
-    width: 200px;
-}
-iframe{
-    width: 100%;
-    height: 50vh;
-}
-.row span{
-    margin: 1vh auto;
+
+/* weather */
+.forecast_view{
+    width: max-content;
 }
 
 .wind_direction{
     width: 30%;
 }
 
+/* wiki */
+.thumbnailImg{
+    height: 15vh;
+    width: 200px;
+}
+
+/* youtube */
+iframe{
+    width: 100%;
+    height: 50vh;
+}
+
+/* covid */
 .chart{
     position: relative;
     width: auto;
 }
-
-
 
 #covid-modal-content{
     display: flex;
     height: fit-content;
     width: fit-content;
 }
-.modal-content{
-    width: auto;
-    background-image: linear-gradient(to left bottom, #dcdc7b, #dfd366, #e4c951, #eabe3c, #f0b225);
-    box-shadow: 0px 20px 0px -10px #000, 0px -20px 0px -10px #000, 20px 0px 0px -10px #000, -20px 0px 0px -10px #000, 0px 0px 0px 10px #ff0000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
-}
+
+
 /* hover effects for select countries */
 #countrySelect:hover,
     #countrySelect:focus {
@@ -161,6 +168,7 @@ iframe{
     animation-iteration-count: infinite;
 }
 
+/* animation frames */
 @keyframes loadAnim{
     0%{  transform: rotate3d(1,1,1,0deg); }
     100%{  transform: rotate3d(1,1,1,360deg); }
