--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -1,180 +1,1 @@
-/* DEFAULT RESET BOX MODAL */
-*,*:after,*:before{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
- /* DEFAULT STYLES  */
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 16px;
-}
-
-header{
-    font-size: 1.3rem;
-}
-
-img{
-    width: 100%;
-}
-
-.summary{
-    padding: 2vh 2vw;
-}
-
-.row span{
-    margin: 1vh auto;
-}
-
-.modal-content{
-    width: auto;
-    background-image: linear-gradient(to left bottom, #dcdc7b, #dfd366, #e4c951, #eabe3c, #f0b225);
-    box-shadow: 0px 20px 0px -10px #000, 0px -20px 0px -10px #000, 20px 0px 0px -10px #000, -20px 0px 0px -10px #000, 0px 0px 0px 10px #ff0000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
-}
-
-/* navbar */
-nav{
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 10%;
-    margin: 20px auto;
-    text-align: center;
-    padding: 10px;
-    z-index: 100;
-}
-
-/* Main  Map View */
-#mapView{
-    width: auto;
-    height: 100vh;
-    z-index: 1;
-}
-
-/* select */
-#countrySelect{
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 20%;
-    background-color: #c0392b;
-    border: none;
-    border-bottom: 2px solid #962d22;
-    color: #efefef;
-    padding: 10px;
-    text-align: center;
-}
-
-/* calendar */
-#calendar {
-    width: 75vw;
-}
-.holiday-modal-content{
-    width: 100vw;
-}
-
-/* weather */
-.forecast_view{
-    width: max-content;
-}
-
-.wind_direction{
-    width: 30%;
-}
-
-/* wiki */
-.thumbnailImg{
-    height: 15vh;
-    width: 200px;
-}
-
-/* youtube */
-iframe{
-    width: 100%;
-    height: 50vh;
-}
-
-/* covid */
-.chart{
-    position: relative;
-    width: auto;
-}
-
-#covid-modal-content{
-    display: flex;
-    height: fit-content;
-    width: fit-content;
-}
-
-
-/* hover effects for select countries */
-#countrySelect:hover,
-    #countrySelect:focus {
-  color: #c0392b;
-  background-color: white;
-  border-bottom-color: #DCDCDC;
-}
-
-/* easie button style modifications */
-.leaflet-bar.easy-button-container.leaflet-control{
-    border: none;
-}
-.leaflet-touch .leaflet-bar button{
-    height:60px;
-    width: 60px;
-    border-radius: 50%;
-    padding: 0;
-    background: none;
-}
-
- /* animation */
-.loader{
-    width: 200px;
-    height: 200px;
-    line-height: 200px;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -100px;
-    font-size: 30px;
-    color: #000;
-    perspective: 200px;
-}
-
-.load-anim1,.load-anim2{
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 5px solid;
-    border-left-color: #10ac84;
-    border-top-color: #ff9f43;
-    border-right-color: #0984e3;
-    border-bottom-color: #d63031;
-
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -100px;
-
-    animation: loadAnim 6s;
-    animation-iteration-count: infinite;
-}
-
-.load-anim2{
-    animation: loadAnim2 3s;
-    animation-iteration-count: infinite;
-}
-
-/* animation frames */
-@keyframes loadAnim{
-    0%{  transform: rotate3d(1,1,1,0deg); }
-    100%{  transform: rotate3d(1,1,1,360deg); }
-}
-
-@keyframes loadAnim2{
-    0%{  transform: rotate3d(1,1,1,0deg); }
-    100%{  transform: rotate3d(1,1,1,-360deg); }
-}
+*,*:after,*:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box}body{font-family:Verdana,Geneva,Tahoma,sans-serif;font-size:16px}header{font-size:1.3rem}img{width:100%}.summary{padding:2vh 2vw}.row span{margin:1vh auto}.modal-content{width:auto;background-image:linear-gradient(to left bottom,#dcdc7b,#dfd366,#e4c951,#eabe3c,#f0b225);box-shadow:0 20px 0 -10px #000,0 -20px 0 -10px #000,20px 0 0 -10px #000,-20px 0 0 -10px #000,0 0 0 10px #ff0000,5px 5px 15px 5px rgb(0 0 0 / 0%)}nav{position:absolute;left:0;right:0;top:10%;margin:20px auto;text-align:center;padding:10px;z-index:100}#mapView{width:auto;height:100vh;z-index:1}#countrySelect{font-weight:700;cursor:pointer;border-radius:20%;background-color:#c0392b;border:none;border-bottom:2px solid #962d22;color:#efefef;padding:10px;text-align:center}#calendar{width:75vw}.holiday-modal-content{width:100vw}.forecast_view{width:max-content}.wind_direction{width:30%}.thumbnailImg{height:15vh;width:200px}iframe{width:100%;height:50vh}.chart{position:relative;width:auto}#covid-modal-content{display:flex;height:fit-content;width:fit-content}#countrySelect:hover,#countrySelect:focus{color:#c0392b;background-color:#fff;border-bottom-color:#DCDCDC}.leaflet-bar.easy-button-container.leaflet-control{border:none}.leaflet-touch .leaflet-bar button{height:60px;width:60px;border-radius:50%;padding:0;background:none}.loader{width:200px;height:200px;line-height:200px;text-align:center;position:absolute;left:50%;top:50%;margin:-100px 0 0 -100px;font-size:30px;color:#000;perspective:200px}.load-anim1,.load-anim2{position:absolute;width:200px;height:200px;border-radius:50%;border:5px solid;border-left-color:#10ac84;border-top-color:#ff9f43;border-right-color:#0984e3;border-bottom-color:#d63031;position:absolute;left:50%;top:50%;margin:-100px 0 0 -100px;animation:loadAnim 6s;animation-iteration-count:infinite}.load-anim2{animation:loadAnim2 3s;animation-iteration-count:infinite}@keyframes loadAnim{0%{transform:rotate3d(1,1,1,0deg)}100%{transform:rotate3d(1,1,1,360deg)}}@keyframes loadAnim2{0%{transform:rotate3d(1,1,1,0deg)}100%{transform:rotate3d(1,1,1,-360deg)}}
