--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -45,6 +45,10 @@ body{
   line-height: 1.6;
 }
 
+section{
+  padding: 5em 2em;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -54,7 +58,9 @@ input {
   display: none;
 }
 
-
+nav{
+  display: none;
+}
 
 .portfolio {
   display: flex;
@@ -200,4 +206,42 @@ h3{
 .section__subtitle--intro, .section__subtitle--about{
   background: var(--clr-accent);
   font-family: var(--ff-secondary);
+  margin-bottom: 1em;
+  padding: .25em 1em;
+}
+
+
+/* Intro section */
+.intro{
+  position: relative;
+}
+
+@media (min-width: 400px){
+  .intro{
+    display: grid;
+    width: min-content;
+    margin: 0 auto;
+    grid-column-gap: 1em;
+    grid-template-areas: 
+        "img title"
+        "img subtitle";
+    grid-template-columns: min-content max-content;    
+  }
+
+  .intro__img{
+    grid-area: img;
+    min-width: 250px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .section__subtitle--intro{
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
+  }
 }
