--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -16,8 +16,10 @@
 
   /* colors */
   --clr-light: #fff;
+  --clr-grey: rgba(168, 180, 178, 0.377);
   --clr-dark: #303030;
   --clr-accent: #16e0bd;
+  --clr-blue: #5301eb;
 
   /* size */
   --fs-h1: 3rem;
@@ -41,8 +43,8 @@
 
 /* General Styles */
 body{
-  background: var(--clr-light);
-  color: var(--clr-dark);
+  background: var(--clr-dark);
+  color: var(--clr-light);
   margin: 0;
   font-family: var(--ff-primary);
   font-size: var(--fs-body);
@@ -107,20 +109,10 @@ nav{
   color: white;
 }
 
-.front,
-.back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
 .section__title--portfolio {
   z-index: 100;
 }
-.front {
-  background-color: #191966;
-}
+
 /* 3D rotating box feature in Skills section */
 .section__title--skills {
   min-height: 70vh;
@@ -213,19 +205,119 @@ h3{
   font-size: var(--fs-h3);
 }
 
-.section__subtitle--intro, .section__subtitle--about{
+.section__subtitle--intro, .section__subtitle--achievements{
   background: var(--clr-accent);
   font-family: var(--ff-secondary);
   margin-bottom: 1em;
   padding: .25em 1em;
 }
 
-
+.section__title--achievements{
+  text-align: center;
+  background-color: var(--clr-blue);
+}
 /* Intro section */
 .intro{
   position: relative;
 }
 
+
+/* Achievements Section */
+.achievements{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.section__title--achievements{
+ width: 100%;
+}
+
+.book{
+  position: relative;
+  width: 350px;
+  height: 500px;
+  transition: transform 0.5s;
+}
+
+.paper{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  perspective: 1500px;
+}
+
+.front,
+.back{
+  background-color: var(--clr-accent);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform-origin: left;
+  transition: transform 0.5s;
+}
+
+.front{
+  z-index: 1;
+  backface-visibility: hidden;
+  border-left: 3px solid var(--clr-dark);
+}
+
+.back{
+  z-index: 0;
+}
+
+.front-content,
+.back-content{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.back-content{
+  transform: rotateY(180deg);
+  
+}
+/* Paper flip effect */
+.flipped .front,
+.flipped .back{
+  transform: rotateY(-180deg);
+}
+/* Controller Buttons */
+.achievements button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin: 0.5em;
+  font-size: 2rem;
+  transition: transform 0.5s;
+}
+
+.achievements button:focus{
+  outline: none;
+}
+
+.achievements button:hover {
+  color: var(--clr-blue);
+}
+
+/* Paper stack order */
+#p1{
+  z-index: 3;
+}
+#p2{
+  z-index: 2;
+}
+#p3{
+  z-index: 1;
+}
 @media (min-width: 300px){
   .intro{
     display: grid;
